--- a/tugas3.html
+++ b/tugas3.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title> Zona Perpustakaan </title>
+    <title> Zona Perpustakaan - Perpustakaan Freedm Institute </title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
     <style> h1 {text-align:center}
     img {float:left}
-    table, th, td {border: 1px black;border-radius: 10px;}
+    table, th, td {border: 1px black; border-radius: 10px;}
     #DENAHGEDUNG# {
     background-color: aqua;
     color: black;
@@ -26,9 +26,9 @@
     </style>
 </head>
 <body>
-<h1 style="background-color: blue; font-family: poppin; color: white"> PERPUSTAKAAN FREEDOM INSTITUTE </h1>
+<h1 style="background-color: brown; font-family: poppin; color: white"> PERPUSTAKAAN FREEDOM INSTITUTE </h1>
 <h2> PROFIL PERPUSTAKAAN </h2>
-<p style="text-align:justify; font-size: 20px;"> <img src="images/perpusfreedom.jpeg" width="400" height="290" style="margin-right: 10px;">
+<p style="text-align:justify; font-size: 18px;"> <img src="images/perpusfreedom.jpeg" width="400" height="290" style="margin-right: 10px;">
     Perpustakaan Freedom berdiri di bawah naungan Freedom Institute dan pada awal tahun 2002 resmi dibuka untuk umum. Keberadaan perpustakaan
     sebelumnya hanya digunakan untuk kepentingan yayasan, jumlah bukunya pun tak banyak sekitar 4.000 buku saja milik Rizal Malarangeng 
     yang juga pemilik perpustakaan. Saat ini koleksi bukunya terbilang lengkap, mulai dari novel, sastra, hingga filsafat bisa kamu temui.
@@ -39,10 +39,13 @@
     memiliki 4000 buku yang dimiliki oleh pemilik perpustakaan ini, Rizal Mallarangeng. Sekarang, di perpustakaan sudah ada sekitar 14.000
     buku. <br> Pengunjung yang datang pun banyak, namun memang masih banyak orang yang belum tahu keberadaan Freedom Institute di dalam 
     Wisma Bakrie. Dalam sehari, pengunjung yang datang mencapai 40 orang. Untuk jadi member, tidak dipungut biaya. Traveler hanya perlu 
-    menunjukkan KTP untuk kelengkapan data, dan hari itu juga kartu anggota dapat dibawa pulang.</p>
+    menunjukkan KTP untuk kelengkapan data, dan hari itu juga kartu anggota dapat dibawa pulang. Di Perpustakaan Freedom menggunakan sistem 
+    layanan terbuka. Dengan sistem ini para pengunjung dapat langsung mencari informasi sesuai dengan kebutuhan mereka tanpa harus mendatangi 
+    petugas terlebih dahulu. Sistem ini digunakan agar para pengguna dapat dengan leluasa mencari sendiri, serta dapat mencari rujukan 
+    lain yang berkaitan.</p>
 
 <!--Block Inline-->    
-<address> Website Perpustakaan: <a href="https://perpustakaanfreedom.com/">Perpus Freedom Institute </a> </address>
+<address style="font-size: large;"> Website Perpustakaan: <a href="https://perpustakaanfreedom.com/">Perpus Freedom Institute </a> </address>
 <br>
 <hr>
 
@@ -50,21 +53,22 @@
 <h2> Jam Layanan Perpustakaan </h2>
 <dl> 
     <dt><b> Senin-Jum'at </b></dt>
-    <dd> Buka 09.00 - 17.00 </dd>
-    <dd> Istirahat 11.00 - 13.00 </dd>
+    <dd style="font-size: large;"> Buka 09.00 - 17.00 </dd>
+    <dd style="font-size: large;"> Istirahat 11.00 - 13.00 </dd>
 </dl>
 <h2> Layanan di Perpustakaan Freedom Intstitute </h2>
 <ol> 
-    <li> Layanan Referensi </li>
-    <li> Layanan Fotokopi </li>
-    <li> Layanan Multimedia</li>
+    <li style="font-size: large;"> Layanan Referensi </li>
+    <li style="font-size: large;"> Layanan Fotokopi </li>
+    <li style="font-size: large;"> Layanan Multimedia</li>
+    <li style="font-size: large;"> Layanan Opac </li>
 </ol>
 
 <ul> 
-    <li> Buku Teks </li>
-    <li> Majalah </li>
-    <li> Surat Kabar </li>
-    <li> Buku Khusus Terbitan </li>
+    <li style="font-size: large;"> Buku Teks </li>
+    <li style="font-size: large;"> Majalah </li>
+    <li style="font-size: large;"> Surat Kabar </li>
+    <li style="font-size: large;"> Buku Khusus Terbitan </li>
 </ul>
 <hr>
 
@@ -72,30 +76,64 @@
 <h2 style="text-align: center;"> FASILITAS PERPUSTAKAAN </h2>
 <table> 
     <tr> 
-        <th> Jenis Fasilitas </th>
-        <th> Keterangan </th>
+        <th style="width: 10%; font-size: 20px;"> Jenis Fasilitas </th>
+        <th style="font-size: 20px;"> Keterangan </th>
     </tr>
     <tr> 
-        <td> Meja & Kursi Partisi </td>
-        <td> jika kamu sedang butuhkan privasi, terdapat meja partisi lengkap dengan stop kontak untuk mengisi ulang baterai ponsel atau 
+        <td style="text-align: center; font-size:larger;"> Meja & Kursi Partisi </td>
+        <td style="text-align: justify; font-size: 18px;"> jika kamu sedang membutuhkan privasi, terdapat meja partisi lengkap dengan stop kontak untuk mengisi ulang baterai ponsel atau 
             laptop. Cocok untuk mengerjakan tugas dengan tenang. </td>
     </tr>
     <tr> 
-        <td> Sofa Empuk </td>
-        <td> tersedia pula sofa empuk yang bisa kamu gunakan saat membaca buku. Sofa hitam ini hanya tersedia dua, di sisi pojok ruangan
+        <td style="text-align: center; font-size:larger;"> Sofa Empuk </td>
+        <td style="text-align: justify; font-size: 18px;"> Tersedia pula sofa empuk yang bisa kamu gunakan saat membaca buku. Sofa hitam ini hanya tersedia dua, di sisi pojok ruangan
             dan satu lagi dekat dengan tembok tengah perpustakaan. Jika ingin fokus membaca buku dengan nyaman, sofa ini bisa pilihan untuk 
             kamu.</td>
     </tr>
+    <tr>
+        <td style="text-align: center; font-size:larger;"> Layanan Fotokopi </td>
+        <td style="text-align: justify; font-size: 18px;"> Karena tidak bisa meminjam buku, perpustakaan ini menyediakan layanan fotokopi. Kamu bisa fotokopi halaman buku tertentu ataupun 
+            satu buku sekaligus. Biaya yang dikenakan per lembar adalah sebesar Rp175,00. Lalu, perpustakaan ini juga punya fasilitas meeting 
+            room yang bisa digunakan untuk umum, dengan syarat harus konfirmasi kepada pihak perpustakaan terlebih dahulu.</td>
+    </tr>
+    <tr> 
+        <td style="text-align: center; font-size:larger;"> Komputer untuk Layanan Opac </td>
+        <td style="text-align: justify; font-size: 18px;"> Jenis katalog yang digunakan Perpustakaan Freedom Institute adalah katalog online OPAC. OPAC yang digunakan di Perpustakaan 
+            Freedom Institute menggunakan software Freelib yang di buat dan dikembangkan sendiri oleh Perpustakaan Freedom Institute. </td>
+    </tr>
 </table>
+<hr>
 
 <!--ID-->
 <h2 id="#DENAHGEDUNG#" style="text-align: center;"> DENAH GEDUNG </h2>
 
 <!--CLASSES-->
 <div class="section"> 
+<h2> Lantai 1 </h2>
+<p style="font-size: large;"> Perpustakaan Freedom Institute hanya terletak di lantai 1, yang dimana perpustakaan tersebut berada di dalam gedung Wisma Bakrie. </p>
 
 </div>
 
+<!--MEDIA-->
+<hr>
+<h2 style="text-align: center;"> LIBRARY TOUR </h2>
+<P style="font-size: large;"> Berikut video mengenai tour Perpustakaan Freedom Institute </P> <iframe width="560" height="315" 
+src="https://youtu.be/3vciTa_WgDY?si=1GthhfP0RQ3RZCps" title="Youtube Video Player" frameborder="0" allow="accellerometer; autoplay;
+clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+
+<!--FORMS-->
+<hr>
+<h2> KRITIK & SARAN </h2>
+
+<form> 
+    <label for="fname" style="font-size: large;"> Nama </label> <br>
+    <input type="text" id="fname" name="fname"> <br>
+    <label for="nim" style="font-size: large;"> NIM </label> <br>
+    <input type="text" id="nim" name="nim"> <br>
+    <label for="kritiksaran" style="font-size: large;"> Kritik/Saran </label> <br>
+    <input type="text" id="kritiksaran" name="kritiksaran"> <br>
+    <input type="submit" value="Submit">
+</form>
 
 </body>
 </html>
