--- a/tugas3.html
+++ b/tugas3.html
@@ -117,9 +117,9 @@
 <!--MEDIA-->
 <hr>
 <h2 style="text-align: center;"> LIBRARY TOUR </h2>
-<P style="font-size: large;"> Berikut video mengenai tour Perpustakaan Freedom Institute </P> <iframe width="560" height="315" 
-src="https://youtu.be/3vciTa_WgDY?si=1GthhfP0RQ3RZCps" title="Youtube Video Player" frameborder="0" allow="accellerometer; autoplay;
-clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+<P style="font-size: large;"> Berikut video mengenai tour Perpustakaan Freedom Institute </P> <iframe width="600" height="350" 
+src="https://www.youtube.com/embed/B_GNsQ_jjdA?si=ux9AaJSMBWD9GUPA" title="YouTube video player" frameborder="0" allow="accelerometer; 
+autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 <!--FORMS-->
 <hr>
@@ -128,8 +128,8 @@ clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allo
 <form> 
     <label for="fname" style="font-size: large;"> Nama </label> <br>
     <input type="text" id="fname" name="fname"> <br>
-    <label for="nim" style="font-size: large;"> NIM </label> <br>
-    <input type="text" id="nim" name="nim"> <br>
+    <label for="No Anggota " style="font-size: large;"> No Anggota </label> <br>
+    <input type="text" id="No Anggota" name="No Anggota"> <br>
     <label for="kritiksaran" style="font-size: large;"> Kritik/Saran </label> <br>
     <input type="text" id="kritiksaran" name="kritiksaran"> <br>
     <input type="submit" value="Submit">
