--- a/tugas2.html
+++ b/tugas2.html
@@ -4,26 +4,28 @@
     Zona Perpustakaan - 3 Rekomendasi Perpustakaan <i> Aesthetic & Comfy </i> di Jakarta
 </title>
 </head>
-<body>
-<h1 style="font-family:Verdana;"> 3 Rekomendasi Perpustakaan <i> Aesthetic & Comfy </i> di Jakarta</h1>
+<body style="background-color: burlywood;">
+<h1 style="font-family:Verdana;background-color: chocolate;text-align: center;"> 3 Rekomendasi Perpustakaan <i> Aesthetic & Comfy </i> di Jakarta</h1>
 <br>
 <img src="images/perpustakaan.jpeg"style="display:block; margin:auto;" width="650"height="450">
 <br>
-<p align="justify"> Perpustakaan selalu identik dengan bangunan yang kaku dan membosankan. Tapi itu dulu loh sob, karena sekarang banyak
+<p align="justify" style="font-size:20px"> Perpustakaan selalu identik dengan bangunan yang kaku dan membosankan. Tapi itu dulu loh sob, karena sekarang banyak
 perpustakaan yang di desain dengan unik dan bikin betah saat dikunjungi. Selain menambah koleksi buku dan fasilitas. Kini, pengelola 
 perpustakaan berlomba-lomba menonjolkan bentuk desain bangunannya yang estetik dan ruangan yang nyaman. Hal ini bertujuan untuk menggaet
 anak-anak muda agar lebih tertarik untuk berkunjung ke perpustakaan. Nah sob, bagi yang sedang mencari lokasi membaca buku dengan suasana
 tenang tapi tetap bisa membuat <i> feed </i> menarik di media sosial, simak 3 perpustakaan kekinian di Jakarta berikut ini, yuk!</p>
 <br>
-<h2> 1. Perpustakaan Umum Provinsi DKI Jakarta </h2>
-<p align="justify"> Perpustakaan ini hadir sebagai tampilan baru dari wajah Taman Ismail Marzuki dalam meningkatkan budaya literasi 
+<h2 style="font-family:Verdana;background-color: brown"> 1. Perpustakaan Umum Provinsi DKI Jakarta </h2>
+<p align="justify" style="font-size:20px"> Perpustakaan ini hadir sebagai tampilan baru dari wajah Taman Ismail Marzuki dalam meningkatkan budaya literasi 
 dengan koleksi 38.000 buku dari umum hingga anak-anak. Fasilitas di perpustakaan ini juga lengkap loh sob, seperti adanya ruang 
 multifungsi, ruang bermain, ruang baca privat, bilik cerita, ruang podcast, bahkan ruang ke jakartaan yang banyak identik dengan koleksi
 sejarahnya. Perpustakaan umum ini terletak di lantai 4-6 Gedung Panjang TIM, perpustakaan jakarta ini hanya menerima 300 orang per 
 harinya dengan jam operasional mulai dari pukul 09.00 WIB.</p> 
-<img src="images/perpusjkt.jpg"width="600"height="400">
-<h3 style="font-size:165%;"> 2. Perpustakaan Freedom Institute </h3>
-<p align="justify"> Perpustakaan Freedom hadir dengan desain interior dengan warna kecokelatan dan atmosfer hangat serta sentuhan 
+<img src="images/perpusjkt.jpg" alt="perpusjkt" style= "width:320;height:180; margin-right:15px"> <img src="images/perpusjkt1.webp" alt="perpusjkt1" style= "width:320;height:180; margin-right:15px"> <img src="images/perpusjkt2.jpg" alt="perpusjkt2" style= "width:320;height:180; margin-right:15px">
+<br>
+<a href="https://perpustakaan.jakarta.go.id/"> Perpustakaan Jakarta </a>
+<h3 style="font-family:Verdana;font-size:165%;background-color: brown"> 2. Perpustakaan Freedom Institute </h3>
+<p align="justify" style="font-size:20px"> Perpustakaan Freedom hadir dengan desain interior dengan warna kecokelatan dan atmosfer hangat serta sentuhan 
 industrial. Perpustakaan ini menyediakan ribuan koleksi literatur di bidang humaniora (filsafat, hukum, sejarah, bahasa, sastra, seni),
 sosial, ekonomi, agama, hingga hubungan internasional. Selain koleksi buku, Perpustakaan Freedom juga menyediakan jurnal-jurnal lokal 
 maupun internasional, hingga koran terkemuka. Tak ketinggalan pula di perpustakaan ini adanya layanan fotokopi dikarenakan buku yang ada
@@ -31,18 +33,22 @@ di perpustakaan tidak bisa dipinjam dan pastinya ada akses internet gratis loh s
 dari pendingin udara, dan juga di setiap interior dinding banyak pajangan lukisan yang dipasang serta tulisan motivasi yang bagus banget
 loh sob ketika berfoto. Perpustakaan buka tiap Senin-Jumat pukul 09.00-16.30 WIB. Kamu juga bisa mendaftar sebagai anggota perpustakaan 
 Freedom Institute secara gratis.</p>
-<img src="images/perpusfreedom.jpeg"width="600"height="400">
-<h4 style="font-size:165%;"> 3. Baca di Tebet </h4>
-<p align="justify"> Perpustakaan satu ini memang bukan bentuk perpustakaan yang secara umum dikelola oleh pemerintah. Namun, konsep 
+<img src="images/perpusfreedom.jpeg"alt="perpusfreedom" style= "width:320;height:180; margin-right:15px"> <img src="images/perpusfreedom1.jpeg"alt="perpusfreedom1" style= "width:320;height:180; margin-right:15px"> <img src="images/perpusfreedom2.jpeg" alt="perpusfreedom2" style= "width:320;height:180; margin-right:15px">
+<br>
+<a href="https://perpustakaanfreedom.com/"> Perpustakaan Freedom </a>
+<h4 style="font-family:Verdana;font-size:165%;background-color: brown"> 3. Baca di Tebet </h4>
+<p align="justify" style="font-size:20px"> Perpustakaan satu ini memang bukan bentuk perpustakaan yang secara umum dikelola oleh pemerintah. Namun, konsep 
 ruangnya bisa dibilang cukup unik dan tak kalah menarik kalangan anak muda. bukan memiliki tampilan kekinian, perpustakaan satu ini 
 dianggap menarik karena memiliki rancangan ruang yang terasa seperti di rumah. Perpustakaan komersil Baca di Tebet ini memiliki 20 ribu
 buku yang selalu diperbarui. Selain sebagai tempat membaca, perpustakaan ini memiliki berbagai fasilitas seperti ruang diskusi, ruang 
 temu, tempat bermain musik dan bahkan bernyanyi. Tak hanya itu, di area tertentu perpustakaan ini juga memiliki ruang karya dan kafe.</p>
-<img src="images/perpusbacaditebet.jpg"width="600"height="400">
+<img src="images/perpusbacaditebet.jpg"alt="perpusbacaditebet" style= "width:320;height:180; margin-right:15px"> <img src="images/perpusbacaditebet1.jpg"alt="perpusbacaditebet1" style= "width:320;height:180; margin-right:15px"> <img src="images/perpusbacaditebet2.jpeg"alt="perpusbacaditebet2" style= "width:320;height:180; margin-right:15px">
+<br>
+<a href="https://bacaditebet.id/"> Baca di Tebet </a>
 <br>
 <br>
 <a href="https:/www.gramedia.com.blog"> Source </a>
+
+
 </body>
-
-
 </html>
