--- a/tugas2.html
+++ b/tugas2.html
@@ -47,8 +47,11 @@ temu, tempat bermain musik dan bahkan bernyanyi. Tak hanya itu, di area tertentu
 <a href="https://bacaditebet.id/"> Baca di Tebet </a>
 <br>
 <br>
-<a href="https:/www.gramedia.com.blog"> Source </a>
+<p> Sumber : <a href="https:/www.gramedia.com.blog"> gramedia.com </a> </p>
 
+<hr>
+
+<b> Nama : Atri Lestari <br> Nim : 11210251000056 </b>
 
 </body>
 </html>
