--- a/tugas4.html
+++ b/tugas4.html
@@ -49,7 +49,7 @@
 <h2> Album Taylor Swift dari Masa ke Masa </h2>
 <div class="clear">
     <br>
-    <d1> Album Pertama (2006) </d1>
+    <d1> Album Taylor Swift
     <dt style="text-align: center;"> <b> "Taylor Swift" </b> </dt>
     <img src="images/album 1.jpeg" alt="">
     <dd>Taylor Swift adalah album studio debut eponymous oleh penyanyi-penulis lagu country pop Amerika yaitu Taylor Swift. Album ini dirilis pada akhir tahun 2006 ketika Swift baru berusia 16 tahun, 
@@ -65,7 +65,6 @@
         Taylor Swift dengan tampil di beberapa tempat, termasuk pembukaannya untuk Rascal Flatts, George Strait, Brad Paisley, dan Tim McGraw dan Faith Hill.</dd> 
 <div class="clear"> </div>
     <br>
-    <d1> Album Kedua (2008) </d1>
     <dt style="text-align: center;"> <b> "Fearless" </b> </dt>
     <img src="images/album 2.png" alt="">
     <dd> Fearless adalah album studio kedua karya penyanyi-penulis lagu asal Amerika, Taylor Swift. Album ini dirilis pada 11 November 2008 oleh Big Machine Records di AS dan Kanada, edisi internasionalnya dirilis pada 9 Maret 2009. 
@@ -82,7 +81,6 @@
         (Taylor's Version), pada April 2021.</dd>
 <div class="clear"> </div>
     <br>
-    <d1> Album Ketiga (2010) </d1>
     <dt style="text-align: center;"> <b> "Speak Now" </b> </dt>
     <img src="images/album 3.png" alt="">
     <dd> Speak Now adalah album studio ketiga karya penyanyi-penulis lagu asal Amerika Taylor Swift, dirilis pada 25 Oktober 2011 melalui Big Machine Records. Swift menulis seluruh lagu dalam album ini seorang diri selama dua tahun, sementara ia mempromosikan album studio 
@@ -96,7 +94,6 @@
         dan menggambarkan lagu-lagunya yang berisi tentang citra publik Swift sebagai preseden untuk penulisan lagu sang penyanyi dalam album-albumnya selanjutnya.</dd>
 <div class="clear"> </div>
     <br>
-    <d1> Album Keempat (2012) </d1>
     <dt style="text-align: center;"> <b> "RED" </b> </dt>
     <img src="images/Red.jpg" alt="">
     <dd> Red adalah album studio keempat karya penyanyi-penulis lagu asal Amerika Serikat, Taylor Swift. Album ini dirilis pada 22 Oktober 2012 oleh Big Machine Records. Judulnya merujuk kepada emosi "merah" yang riuh yang dialami Swift dalam pengonsepan album ini; lagu-lagunya mendiskusikan 
@@ -112,7 +109,6 @@
         dirilis pada tahun 2021.</dd>
 <div class="clear"> </div>
     <br>
-    <d1> Album Kelima (2014) </d1>
     <dt style="text-align: center;"> <b> "1989" </b>  </dt>
     <img src="images/1989.jpeg" alt="">
     <dd> 1989 adalah album studio kelima karya penyanyi-penulis lagu asal Amerika Taylor Swift. Album ini dirilis pada 27 Oktober 2014 oleh Big Machine Records. Setelah para kritikus musik mempertanyakan statusnya sebagai seorang musisi country menyusul perilisan album keempatnya Red (2012) yang dipengaruhi 
@@ -126,7 +122,6 @@
         ikon pop yang mempromosikan poptimisme, sementara juga menyorot bagaimana integritas artistik dan citra publiknya menderita pengawasan media yang kian meningkat.</dd>
 <div class="clear"> </div>
     <br>
-    <d1> Album Keenam (2017) </d1>
     <dt style="text-align: center;"> <b> "Reputation" </b> </dt>
     <img src="images/reputation.png" alt="">
     <dd> Reputation adalah album studio keenam oleh penyanyi-penulis lagu Amerika Taylor Swift. Album ini dirilis pada 10 November 2017, oleh Big Machine Records. Swift menjadi subjek pengawasan tabloid yang merajalela setelah merilis album studio kelimanya 1989 (2014), dengan media yang mempublikasikan kehidupan pribadinya dan perselisihannya 
@@ -140,7 +135,6 @@
         dan akun media sosialnya lima hari sebelum mengumumkan reputation, yang menarik perhatian luas di internet; berbagai artis sejak itu menggunakan taktik ini untuk mengumumkan musik baru.</dd>
 <div class="clear"> </div>
     <br>
-    <d1> Album Ketujuh (2019) </d1>
     <dt style="text-align: center;"> <b> "Lover" </b> </dt>
     <img src="images/lover.png" alt="">
     <dd> Lover adalah album studio ketujuh oleh penyanyi-penulis lagu Amerika Taylor Swift. Album ini dirilis pada 23 Agustus 2019, melalui Republic Records. Sebagai produser eksekutif, Swift bekerja dengan produser Jack Antonoff, Louis Bell, Frank Dukes dan Joel Little di album ini. Album ini digambarkan oleh Swift sebagai "surat cinta untuk cinta itu sendiri", 
@@ -153,7 +147,6 @@
         Song of the Year. Album ini muncul di berbagai daftar musik terbaik akhir tahun 2019.</dd>
 <div class="clear"> </div>
     <br>
-    <d1> Album Kedelapan (2020) </d1>
     <dt style="text-align: center;"> <b> "Folklore" </b> </dt>
     <img src="images/folklore.png" alt="">
     <dd> Folklore adalah album studio kedelapan oleh penyanyi-penulis lagu Amerika, Taylor Swift. Folklore merupakan album kejutan, dirilis pada 24 Juli 2020, melalui Republic Records. Swift menyusun Folklore dalam karantina selama Pandemi Covid-19 sebagai "kumpulan lagu dan cerita yang mengalir seperti aliran kesadaran" dari imajinasinya, dan berkolaborasi dengan produser-produser Aaron Dessner 
@@ -163,7 +156,6 @@
         Australia, Finlandia, Norwegia, Selandia Baru, dan Belgia.</dd>
     <div class="clear"> </div>
     <br>
-    <d1> Album Kesembilan (2020) </d1>
     <dt style="text-align: center;"> <b> "Evermore" </b> </dt>
     <img src="images/evermore.png" alt="">
     <dd> Evermore adalah album studio kesembilan oleh penyanyi-penulis lagu Amerika Serikat Taylor Swift. Album ini dirilis pada 11 Desember 2020, melalui Republic Records, kurang dari lima bulan setelah album studio kedelapan penyanyi ini, Folklore. Evermore adalah produk spontan dari 
@@ -174,7 +166,6 @@
         Banyak ulasan menganggap album ini sebagai sebuah sekuel atau pasangan Folklore. Evermore terdaftar oleh berbagai publikasi dalam peringkat akhir tahun mereka untuk album terbaik tahun 2020, dan telah dinominasikan untuk Album of the Year dalam 64th Annual Grammy Awards mendatang. </dd>
     <div class="clear"> </div>
     <br>
-    <d1> Album Kesepuluh (2022) </d1>
     <dt style="text-align: center;"> <b> "Midnights" </b> </dt>
     <img src="images/midnight.png" alt="">
     <dd> Midnights adalah album studio kesepuluh karya penyanyi-penulis lagu Amerika Taylor Swift, yang dirilis pada 21 Oktober 2022, melalui Republic Records. Diumumkan di Penghargaan Video Musik MTV 2022, album ini adalah karya pertama Swift sejak album-album 2020-nya, Folklore dan Evermore. Midnights adalah sebuah album konsep tentang kontemplasi nokturnal, ditulis dan diproduksi oleh Swift dengan Jack Antonoff sebagai kolaborator utamanya.
@@ -182,6 +173,7 @@
         Setelah promosi terbatas untuk album-album studionya sebelumnya, Swift kembali menggunakan roll-out album tradisionalnya untuk Midnights. Dia mengumumkan daftar lagunya melalui sebuah serial TikTok berjudul Midnights Mayhem with Me dari 21 September hingga 7 Oktober 2022, mengungkapkan penampilan Lana Del Rey dalam lagu keempat, "Snow on the Beach". Tujuh lagu bonus dirilis pada 21 Oktober, diikuti oleh video musik untuk "Anti-Hero" dan "Bejeweled", yang pertama disebutkan merupakan singel utama album ini, dan lagu nomor satu kesembilan Swift di Billboard Hot 100
         Midnights disambut dengan pujian meluas dari para kritikus musik, yang menyanjung produksi yang terkendali, penulisan yang jujur, dan irama vokal di dalamnya. Memecahkan rekor Spotify untuk album yang paling banyak diputar dalam sehari, Midnights merupakan sebuah kesusksesan komersial di seluruh format konsumsi musik. Album ini telah memuncaki tangga album di 25 wilayah, termasuk Australia, Britania Raya, Italia, Jerman, Prancis, dan Spanyol. Di Amerika Serikat, album ini debut dengan 1,5 juta unit, menjadi album 2022 dengan penjualan terlaris dan tercepat, 
         mencatat minggu penjualan vinil terbesar pada abad ke-21, menjadi album nomor satu kesebelas Swift di Billboard 200, dan pada minggu yang sama menghasilkan sepuluh lagu 10 besar di Hot 100—yang terbanyak untuk sebuah album. Untuk mendukung album ini, Swift akan mengadakan The Eras Tour pada tahun 2023.</dd>
+</d1>
 </div>
 <br>
 <br>
