--- a/tugas4.html
+++ b/tugas4.html
@@ -47,7 +47,7 @@
 <br>
 <br>
 <h2> Album Taylor Swift dari Masa ke Masa </h2>
-<div class="clear">
+<div class="album">
     <br>
     <d1> Album Taylor Swift
     <dt style="text-align: center;"> <b> "Taylor Swift" </b> </dt>
