--- a/tugas4.html
+++ b/tugas4.html
@@ -179,10 +179,10 @@
 <br>
 <h2> SOSIAL MEDIA TAYLOR SWIFT </h2>
 <div class="footer">
-    <p><b> Berikut beberapa akun sosial media Taylor Swift yang dapat kalian follow </b></p>
-    <p> Instagram <a href="https://www.instagram.com/taylorswift/?hl=en"> @taylorswift</a> </p>
-    <p> Youtube <a href="https://www.youtube.com/@TaylorSwift"> Taylor Swift </a> </p>
-    <p> Spotify <a href="https://spotify.link/pLCjOZLkHDb"> Taylor Swift </a> </p>
+    <p><b> Berikut beberapa akun sosial media Taylor Swift yang dapat kalian follow </b>
+    Instagram <a href="https://www.instagram.com/taylorswift/?hl=en"> @taylorswift</a> 
+    Youtube <a href="https://www.youtube.com/@TaylorSwift"> Taylor Swift </a> 
+    Spotify <a href="https://spotify.link/pLCjOZLkHDb"> Taylor Swift </a> </p>
 </div>
                     
 </body>
